day-7/manifests/lightspeed-operator-subscription.yaml
# OpenShift Lightspeed Operator (prerequisite for OLSConfig / console assistant)
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-lightspeed
  labels:
    openshift.io/cluster-monitoring: "true"
